[package]
name = "hug-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
tokio = "1.28.2"
tracing = "0.1.40"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ahash = "0.8"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
moka = { version = "0.12", features = ["future"] }
futures = { version = "0.3" }
serde_json = "1.0"
